<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/mainLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:background="@color/colorBackground">

    <LinearLayout android:layout_width="300dp"
                  android:layout_height="wrap_content"
                  android:layout_margin="20dp"
                  android:orientation="vertical"
                  android:gravity="center">

        <!-- SEARCH CARD-->
        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" android:gravity="center" android:padding="20dp">

                <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/search_textView"
                        android:fontFamily="@font"
                        android:textStyle="bold"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textSize="20sp"
                        android:layout_marginBottom="16dp"
                        android:textAlignment="center"/>

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_height="100dp"
                        android:layout_width="100dp"
                        android:src="@drawable/ic_search"
                        android:layout_marginBottom="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_textInput_hint">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/search_textInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/search_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/search_button"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- DIVIDER -->
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/design_default_color_on_secondary"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

        <!-- SCAN CARD-->
        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" android:gravity="center" android:padding="20dp">

                <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scan_textView"
                        android:fontFamily="@font"
                        android:textStyle="bold"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textSize="20sp"
                        android:layout_marginBottom="16dp"
                        android:textAlignment="center"/>

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_height="100dp"
                        android:layout_width="100dp"
                        android:src="@drawable/ic_scan"
                        android:layout_marginBottom="16dp"/>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/scan_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scan_button"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>